--- a/package.json
+++ b/package.json
@@ -90,11 +90,13 @@
     "debug": "^2.2.0",
     "extract-text-webpack-plugin": "^1.0.0",
     "file-loader": "^0.9.0",
+    "flexboxgrid": "^6.3.1",
     "fs-extra": "^1.0.0",
     "html-webpack-plugin": "^2.22.0",
     "imports-loader": "^0.6.5",
     "ip": "^1.1.2",
     "json-loader": "^0.5.4",
+    "material-ui": "^0.16.4",
     "node-sass": "^3.7.0",
     "normalize.css": "^5.0.0",
     "postcss-loader": "^1.1.0",
@@ -102,6 +104,7 @@
     "react-dom": "^15.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.6.0",
     "redux-thunk": "^2.0.0",
     "rimraf": "^2.5.4",
